--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,7 @@
 	<name>achat</name>
 	<description>Projet pour le module DevOps</description>
 	<properties>
-
-			<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-
-
+		<propertiesEncoding>UTF-8</propertiesEncoding>
 		<java.version>1.8</java.version>
 		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
 	</properties>
@@ -83,12 +80,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
-				<configuration>
-					<nonFilteredFileExtensions>
-						<nonFilteredFileExtension>pdf</nonFilteredFileExtension>
-						<nonFilteredFileExtension>swf</nonFilteredFileExtension>
-					</nonFilteredFileExtensions>
-				</configuration>
+				<configuration>  <nonFilteredFileExtensions><nonFilteredFileExtension>xls</nonFilteredFileExtension><nonFilteredFileExtension>zip</nonFilteredFileExtension></nonFilteredFileExtensions></configuration>
 			</plugin>
 		</plugins>
 	</build>
