--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,10 @@
 	<name>achat</name>
 	<description>Projet pour le module DevOps</description>
 	<properties>
-		<propertiesEncoding>UTF-8</propertiesEncoding>
+
+			<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+
 		<java.version>1.8</java.version>
 		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
 	</properties>
@@ -80,7 +83,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
-				<configuration>  <nonFilteredFileExtensions><nonFilteredFileExtension>xls</nonFilteredFileExtension><nonFilteredFileExtension>zip</nonFilteredFileExtension></nonFilteredFileExtensions></configuration>
+				<version>3.2.0</version>
 			</plugin>
 		</plugins>
 	</build>
