--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,8 @@
 			<version>3.0.0</version>
 		</dependency>
 
+		<dependency><groupId>org.apache.maven.plugins</groupId><artifactId>maven-resources-plugin</artifactId><version>3.2.0</version></dependency>
+
 	</dependencies>
 	<distributionManagement>
 		<repository>
